added smth to tex

--- a/Positronium/Report/main.tex
+++ b/Positronium/Report/main.tex
@@ -3,12 +3,31 @@
 \let\origautoref\autoref
 \def\autoref#1{{\origautoref{#1}}}
 
-\begin{document}
 
 \def\sectionautorefname{Section}
 \def\subsectionautorefname{Section}
 \def\subsubsectionautorefname{Section}
 
-ciao
+\author{
+  Vanessa Cerrone\\
+  Matr. \texttt{205boh}
+  \and
+  Sabrina Ciarlantini\\
+  Matr. \texttt{123456}
+  \and
+  Aurora Leso\\
+  Matr. \texttt{123456}
+}
+\title{\bf{Positronium}}
+\date{Date}
+
+\begin{document}
+
+
+  \maketitle
+
+
+\end{document}
+\rule{\linewidth}{0.4pt}
 
 \end{document}
