--- a/Positronium/Report/main.tex
+++ b/Positronium/Report/main.tex
@@ -18,16 +18,33 @@
   Aurora Leso\\
   Matr. \texttt{123456}
 }
-\title{\bf{Positronium}}
-\date{Date}
+\title{\Huge{\textsc{\bf{Positronium}}}}
+\date{03/04/08 November 2021}
 
 \begin{document}
 
+\def\sectionautorefname{Section}
+\def\subsectionautorefname{Section}
+\def\subsubsectionautorefname{Section}
+
 
   \maketitle
+  \rule{\linewidth}{0.4pt}
+
+
+  \section{Section 1} 
+  \label{sec:section1} 
+  \input{section1.tex} 
+
+  \section{Section 2} 
+  \label{sec:section2} 
+  \input{section2.tex} 
+
+  \section{Section 3} 
+  \label{sec:section3} 
+  \input{section3.tex} 
 
 
 \end{document}
-\rule{\linewidth}{0.4pt}
 
-\end{document}
+
